Closed
Bug 1667121
Opened 4 years ago
Closed 4 years ago
CBCS incorrectly configured as CENC when sending video decoder init to CDM
Categories
(Core :: Audio/Video: Playback, defect, P1)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
83 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox81 | --- | unaffected |
firefox82 | --- | fixed |
firefox83 | --- | fixed |
People
(Reporter: bryce, Assigned: bryce)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
Bug 1654397 incorrectly sets the crypto scheme when using CBCS to CENC, this typo should be fixed.
Assignee | ||
Comment 1•4 years ago
|
||
Pushed by bvandyk@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fed5816432cb
Set Cbcs encryption scheme correctly when initializing CDM. r=alwu
Comment 3•4 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox83:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Comment 4•4 years ago
|
||
Set release status flags based on info from the regressing bug 1654397
status-firefox81:
--- → unaffected
status-firefox82:
--- → affected
status-firefox-esr78:
--- → unaffected
Assignee | ||
Comment 5•4 years ago
|
||
Comment on attachment 9177649 [details]
Bug 1667121 - Set Cbcs encryption scheme correctly when initializing CDM. r?alwu
Beta/Release Uplift Approval Request
- User impact if declined: Possible bustages with sites playing encrypted media. The CDM is a black box and it's not 100% clear how it will respond to misconfiguration across different inputs so I'd rather we pass the correct config to be safe.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It's low risk as it's a single line change that fixing a typo.
- String changes made/needed: None.
Attachment #9177649 -
Flags: approval-mozilla-beta?
Comment 6•4 years ago
|
||
Comment on attachment 9177649 [details]
Bug 1667121 - Set Cbcs encryption scheme correctly when initializing CDM. r?alwu
regression fix, approved for 82.0b4
Attachment #9177649 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•