Bug 1667121 - Set Cbcs encryption scheme correctly when initializing CDM. r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D91286